# topsis

./: .gitignore  README.md  pyproject.toml
tests/: test_topsis.py
topsis/: __init__.py  core.py
