[project]
name = "topsis"
version = "0.1.0"
description = "Python package that implements the TOPSIS algorithm, a multi-criteria decision-making method for ranking and selecting alternatives."
authors = [
    {name = "richardzmija",email = "165653574+richardzmija@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"

